# xAI-Forge

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  screenshots.yml
docs/: DESIGN.md  EVENT_SPEC.md  FEATURES.md  PROVIDERS.md  ROADMAP.md  SDK.md  SECURITY.md  TOOLS.md  index.md
examples/: export_trace.py  policy-demo.json  query_traces.py  sdk_quickstart.py
scripts/: capture_screenshots.sh  demo.sh  dev.sh  doctor.sh  export_schema.py  gen_sample_traces.py  lint.sh  release.sh  verify.sh  workbench_demo.sh
tests/: conftest.py  test_bench_report.py  test_demo.py  test_exporters.py  test_forge_evals.py  test_forge_experiments.py  test_forge_gateway.py  test_forge_index.py  test_forge_perf.py  test_forge_safety.py  test_forge_trace.py  test_health_endpoint.py  test_plugins.py  test_policy_cli.py  test_policy_engine.py  test_policy_registry.py  test_query.py  test_run_metrics.py  test_sdk.py  test_server.py  test_stream_run_manifest.py  test_tools.py  test_trace_store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: capture_screenshots.ts
web/src/: App.test.tsx  App.tsx  AppRoutes.test.tsx  WorkbenchPages.test.tsx  styles.css
xaiforge/: __init__.py  __main__.py  cli.py  demo.py  events.py  exporters.py  query.py  server.py  trace_store.py
xaiforge_sdk/: __init__.py  client.py  models.py  sse.py
(+98 files in other folders)
